# llm-plus

./: .gitignore  package-lock.json  package.json
backend/: .pylintrc  pyproject.toml
backend/app/: main.py  worker.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 6b33d1edca3d_init.py  f017ddd3baba_init.py  f68b00ceb8a0_add_user.py
backend/app/api/: deps.py  main.py
backend/app/api/routers/: llm.py  login.py  user.py
backend/app/cache/: conversation_message.py
backend/app/core/: celery_app.py  config.py  db.py  mq.py  redis_client.py  security.py
backend/app/crud/: bot.py  conversation.py  conversation_message.py  message.py  user.py
backend/app/models/: base.py  bot.py  conversation.py  conversation_message.py  file.py  message.py  token.py  tool.py  user.py  user_conversation.py
backend/app/models/relations/: conversation_message.py  user_conversation.py
backend/app/schemas/: conversation.py  llm.py
backend/app/services/chatbot/: main.py
backend/app/services/common/: llm.py
backend/app/utils/: __init__.py  errors.py  log.py  response.py  time.py  title.py  uuid4.py
backend/scripts/: start.sh  worker_start.sh
frontend/: .gitignore  components.json  config-overrides.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: index.css  index.tsx
frontend/src/components/: AuthRoute.tsx  Conversation.tsx  Example.tsx  HistoryItem.tsx  HistoryList.tsx  Message.tsx  MessageItem.tsx  MessageList.tsx
frontend/src/hooks/: index.ts
frontend/src/lib/: conversation.ts  message.ts
(+20 files in other folders)
