[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
sqlmodel = "^0.0.18"
psycopg2-binary = "^2.9.9"
langchain = "^0.1.20"
langchain-openai = "^0.1.6"
redis = "^5.0.4"
pika = "^1.3.2"
loguru = "^0.7.2"
celery = "^5.4.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
